[tool.poetry]
name = "pyhadeswap"
version = "0.2.9"
description = "Hadeswap API for Python"
authors = ["1S33dp1sk <mrkj@d-cloud.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
solana = "^0.31.0"
solders = "^0.19.0"
anchorpy = "^0.18.0"
construct = "^2.10.70"
base58 = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
